<resources>
    <!-- Titles -->
    <string name="app_name">PtiChatApp</string>

    <!-- Labels -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hostname">HostName</string>
    <string name="port">Port</string>

    <!-- Buttons -->
    <string name="connexion">Connexion</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="rename_chat">Rename Chat…</string>
    <string name="wizz">👋</string>

    <!-- Descriptions -->
    <string name="avatar">Cute image of a cat</string>
    <string name="status">Tapez votre message ici</string>
    <string name="message">Tapez votre message ici</string>

    <!-- Other -->
    <string name="says">says :</string>
    <string name="channel_description">Notification Messages</string>
    <string name="channel_name">PtiChat</string>
</resources>
