<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".ChatActivity">

    <ImageView
        android:id="@+id/chatAvatar"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar1"
        tools:srcCompat="@tools:sample/avatars[12]" />

    <View
        android:id="@+id/greyLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@+id/userAvatar" />

    <ImageView
        android:id="@+id/userAvatar"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/avatar1"
        tools:srcCompat="@tools:sample/avatars[14]" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chatView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/greyLine"
        app:layout_constraintEnd_toStartOf="@+id/chatAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greyLine" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onSend"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userAvatar"
        app:layout_constraintTop_toBottomOf="@+id/newMessage" />
</android.support.constraint.ConstraintLayout>