<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id = "@+id/main"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar1"
        tools:srcCompat="@tools:sample/avatars[14]" />

    <EditText
        android:id="@+id/mainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@+id/mainAvatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Garfield" />

    <TextView
        android:id="@+id/mainIsOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/mainName"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="(en ligne)" />

    <EditText
        android:id="@+id/mainStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/status"
        android:inputType="text"
        android:text="@string/status"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toEndOf="@+id/mainAvatar"
        app:layout_constraintTop_toBottomOf="@+id/mainName"
        tools:text="@string/status" />

    <View
        android:id="@+id/greyLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@+id/mainAvatar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mainContactView"
        android:layout_width="0dp"
        android:layout_height="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greyLine" />

    <View
        android:id="@+id/greyLine2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@+id/mainContactView" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mainChatView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greyLine2" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="0dp"
        android:onClick="onLogout"
        android:text="@string/logout"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onNewChatPressed"
        app:backgroundTint="#e0e0e0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_chat_24dp"
        android:focusable="true" />

</android.support.constraint.ConstraintLayout>